annuity due complete

--- a/annuity/annuity-7.html
+++ b/annuity/annuity-7.html
@@ -35,7 +35,7 @@
                         <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                         <div class="container">
 
-                            <form class="indent">
+                            <form>
 
                                 <label style="margin-left: 28px;">Cash Flow (CF)</label>
                                 <input id="cf1" type="number"><br>
