--- a/annuity/annuity-8.html
+++ b/annuity/annuity-8.html
@@ -35,7 +35,7 @@
                         <p class="question">If I save $100 per month in an account earning a nominal rate of 8% per year for 20 years, how much should the account be worth?</p>
 
                         <div class="container">
-                            <form class="indent">
+                            <form>
 
                                 <label style="margin-left: 28px;">Cash Flow (CF)</label>
                                 <input id="cf2" type="number"><br>
