--- a/annuitydue/annuitydue-1.html
+++ b/annuitydue/annuitydue-1.html
@@ -9,12 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Formulas</title>
+    <title>TVM - Annuities</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
 
         <!---------------- Title/Cover slide  *************** -->
         <div id="" class="slide background-image">
@@ -25,9 +24,9 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
-                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div> -->
-                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-1.html">Home</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-help.html">Math Help</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-5.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -36,7 +35,7 @@
                 </div>
                 <div class="offset-5 col-4 offset-md-6">
                     <a type="button" class="hide btn"></a>
-                    <a type="button" class="btn start" href="cashflow-2.html">Start!</a>
+                    <a type="button" class="btn start" href="annuitydue-2.html">Start!</a>
                 </div>
             </div>
         </div>
