--- a/annuitydue/annuitydue-2.html
+++ b/annuitydue/annuitydue-2.html
@@ -10,61 +10,49 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Cash Flows</title>
+    <title>TVM - Annuity Due</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
-        <!---------------- SLIDE 9 - CONTENT ********************** -->
-        <div id="slide9" class="slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Cash Flows</h2>
-                    <h3 class="secondary-title">Annuities</h3>
+                    <h2 class="primary-title">TVM: Annuity Due</h2>
+                    <!-- <h3 class="secondary-title">Annuities</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./cashflow-help.html">Math Help</a></div>
-                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-1.html">Home</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-help.html">Math Help</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-5.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>There are two types of annuities:
-                            <ul>
-                                <li>Regular Annuity, also known as an Ordinary Annuity</li>
-                                <li>Annuity Due</li>
-                            </ul>
-                        </p>
-                        <p>The difference is in the timing of cash flows.
-                            <ul>
-                                <li>Regular annuity: cash flow arrives at the <span class="alert">end</span> of each period</li>
-                                <li>Annuity due: cash flow arrives at the <span class="alert">beginning</span> of each period</li>
-                            </ul>
+                        <h3>Annuities Due</h3>
+                        <hr>
+                        In a previous tutorial, we discussed ordinary annuities, but there are two types of annuities. The difference is in the timing of cash flows.
+                        <ul>
+                            <li>Regular Annuity, also known as an Ordinary Annuity: cash flow arrives at the <span class="alert">end</span> of each period</li>
+                            <li>Annuity Due: cash flow arrives at the <span class="alert">beginning</span> of each period</li>
+                        </ul>
                         </p>
                         <p>If the problem does not specifiy whether you are dealing with a regular annuity or an annuity due, or if it doesn't state when payments are made, <b>assume that it is a regular annuity</b>.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="cashflow-1.html">Back</a>
-                    <a type="button" class="btn" href="cashflow-3.html">Continue</a>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-5 col-sm-3">
-                    <div class="page-number">9</div>
+                    <div class="page-number"></div>
+                </div>
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="./annuitydue-1.html">Back</a>
+                    <a type="button" class="btn" href="./annuitydue-3.html">Continue</a>
                 </div>
             </div>
         </div>
-        <!---------------- end SLIDE 9 - CONTENT ********************** -->
-
-
-
 
     </div> <!--  end of container -->
 
