--- a/annuitydue/annuitydue-3.html
+++ b/annuitydue/annuitydue-3.html
@@ -10,54 +10,53 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>TVM - Annuities</title>
+    <title>TVM - Annuity Due</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: Annuities</h2>
+                    <h2 class="primary-title">TVM: Annuity Due</h2>
                     <!-- <h3 class="secondary-title">Annuities</h3> -->
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuity-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-1.html">Home</a></div>
+                <!-- <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-help.html">Math Help</a></div> -->
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./annuitydue-5.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>There are two types of annuities:
-                            <ul>
-                                <li>Regular Annuity, also known as an Ordinary Annuity</li>
-                                <li>Annuity Due</li>
-                            </ul>
+                        <h5>Why does the timing of the cash flows matter?</h5>
+                        <p>Look at the timelines of a regular annuity or an annuity due:</p>
+
+                        <img src="../images/annuity_regular_vs_due.png" class="img-fluid " alt="less interest paid for an ordinary annuity">
+                        <p>As you can see, the annuity due pays an extra period of interest on each payment. The extra interest results in a higher Future Value.
                         </p>
-                        <p>The difference is in the timing of cash flows.
-                            <ul>
-                                <li>Regular annuity: cash flow arrives at the <span class="alert">end</span> of each period</li>
-                                <li>Annuity due: cash flow arrives at the <span class="alert">beginning</span> of each period</li>
-                            </ul>
-                        </p>
-                        <p>If the problem does not specifiy whether you are dealing with a regular annuity or an annuity due, or if it doesn't state when payments are made, <b>assume that it is a regular annuity</b>.</p>
+                        <h6>Examples of Annuities due</h6>
+                        <ul>
+                            <li>Property rents/leases are due at the beginning of the month</li>
+                            <li>Insurance Premiums are due up front</li>
+                        </ul>
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-5 col-sm-3">
+                <div class="col-1">
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="annuity-2.html">Back</a>
-                    <a type="button" class="btn" href="annuity-4.html">Continue</a>
+                    <a type="button" class="btn" href="./annuitydue-2.html">Back</a>
+                    <a type="button" class="btn" href="./annuitydue-4.html">Continue</a>
                 </div>
             </div>
         </div>
+
     </div> <!--  end of container -->
 
 
