--- a/basics/basics-7.html
+++ b/basics/basics-7.html
@@ -35,7 +35,7 @@
                         <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>Present Value (PV)</label>
                                     <input id="PV" type="number" placeholder="0"><br>
 
