--- a/ear/ear-6.html
+++ b/ear/ear-6.html
@@ -37,7 +37,7 @@
                         <p>Enter the value of each variable in the boxes below.</p>
                         <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
                         <div class="container">
-                            <form action="" class="indent">
+                            <form action="">
                                 <label style="margin-left: 59px;">Interest (i)</label>
                                 <input id="int-ex6" type="number"><br>
                                 <label>Compounding (m)</label>
