--- a/formulas/formulas-10.html
+++ b/formulas/formulas-10.html
@@ -36,7 +36,7 @@
                         <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>Present Value (PV) </label>
                                     <input id="form3pv" type="number"><br>
 
