--- a/formulas/formulas-8.html
+++ b/formulas/formulas-8.html
@@ -35,7 +35,7 @@
                         <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>Future Value (FV) </label>
                                     <input id="form1fv" type="number"><br>
 
