--- a/formulas/formulas-9.html
+++ b/formulas/formulas-9.html
@@ -38,7 +38,7 @@
                         <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>Present Value (PV)</label>
                                     <input id="form2pv" type="number"><br>
 
