--- a/not-on-server/ear-8.html
+++ b/not-on-server/ear-8.html
@@ -41,7 +41,7 @@
                         <p class="note">Note: Please round to 2 places after the decimal point.</span></p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>EAR of Option A:</label>
                                     <input id="ear-ex9a" type="number" placeholder="00.00">%<br>
                                     <label>EAR of Option B:</label>
