--- a/not-on-server/ear-extra.html
+++ b/not-on-server/ear-extra.html
@@ -351,7 +351,7 @@
                         <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                     <input id="int-ex6" type="number" placeholder="00"><br>
                                     <label>m</span> </label>
@@ -433,7 +433,7 @@
                         <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly? <span class="note">(Enter two digits to the right of the decimal)</span></p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label><b>EAR</b></label>
                                     <input id="ear-ex7" type="number" placeholder="0.00">%<br>
                                 </form>
@@ -516,7 +516,7 @@
                         <div class="container">
                             <div class="">
                                 <p>Option A</p>
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                     <input id="int-ex8a" type="number" placeholder="00"><br>
                                     <label>m</span> </label>
@@ -524,7 +524,7 @@
                                 </form>
                                 <br><br>
                                 <p>Option B</p>
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                     <input id="int-ex8b" type="number" placeholder=".0000"><br>
                                     <label>m</span> </label>
@@ -613,7 +613,7 @@
                         <p class="note">Note: Please round to 2 places after the decimal point.</span></p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>EAR of Option A:</label>
                                     <input id="ear-ex9a" type="number" placeholder="00.00">%<br>
                                     <label>EAR of Option B:</label>
