--- a/not-on-server/exercise2-2.html
+++ b/not-on-server/exercise2-2.html
@@ -36,7 +36,7 @@
                         <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <label>Present Value (PV)</label>
                                     <input id="Present Value (PV)alue-ex2" type="number"><br>
