--- a/not-on-server/formulas-11.html
+++ b/not-on-server/formulas-11.html
@@ -38,7 +38,7 @@
                         <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label> </label>
                                     <input id="Present Value (PV)alue-ex12" type="number"><br>
                                     <label> </label>
