--- a/not-on-server/originals/tvm-calc-test.html
+++ b/not-on-server/originals/tvm-calc-test.html
@@ -151,7 +151,7 @@
     <div class="content">
         <div class="container">
             <div class="">
-                <form action="" class="indent">
+                <form action="">
 
                     <label>PV </label>
                     <input id="pvalue" type="number" placeholder="0"><br>
