--- a/not-on-server/originals/tvm1-exercises copy 18.html
+++ b/not-on-server/originals/tvm1-exercises copy 18.html
@@ -82,7 +82,7 @@
                             <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
 
                                         <label>Present Value (PV)</label>
                                         <input id="Present Value (PV)alue-ex2" type="number"><br>
@@ -192,7 +192,7 @@
                             <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>Future Value (FV) </label>
                                         <input id="Future Value (FV)alue-ex3" type="number"><br>
                                     </form>
@@ -303,7 +303,7 @@
                             <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>Present Value (PV) </label>
                                         <input id="Present Value (PV)alue-ex4" type="number"><br>
                                         <label>Future Value (FV) </label>
@@ -402,7 +402,7 @@
                             <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond (assume annual compounding/discounting)</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>Present Value (PV) </label>
                                         <input id="Present Value (PV)alue-ex5" type="number"><br>
                                     </form>
@@ -509,7 +509,7 @@
                             <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>Present Value (PV) </label>
                                         <input id="Present Value (PV)alue-ex6" type="number"><br>
                                         <label>Future Value (FV) </label>
@@ -612,7 +612,7 @@
                             <p class="question">What interest rate is required for a deposit to double in 10 years? <span class="note">Note: Include 3 digits to the right of the decimal.</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>i </label>
                                         <input id="int-ex7" type="number" placeholder="0.000"><br>
                                     </form>
@@ -714,7 +714,7 @@
                             <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>Present Value (PV) </label>
                                         <input id="Present Value (PV)alue-ex8" type="number"><br>
                                         <label>Future Value (FV) </label>
@@ -817,7 +817,7 @@
                             <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>n </label>
                                         <input id="yrs-ex9" type="number"><br>
                                     </form>
@@ -908,7 +908,7 @@
                 <p class="question">How much will $3,000 in a certificate of deposit that pays 3% annual interest be worth in 4 years?</p>
                 <div class="container">
                     <div class="">
-                        <form action="" class="indent">
+                        <form action="">
                             <label>Future Value Factor </label>
                             <input id="Future Value (FV)alue-ex10" type="number" placeholder="0.0000"><br>
                         </form>
@@ -996,7 +996,7 @@
                 <p class="question">How much will $3,000 in a certificate of deposit that pays 3% annual interest be worth in 4 years?</p>
                 <div class="container">
                     <div class="">
-                        <form action="" class="indent">
+                        <form action="">
                             <label> </label>
                             <input id="Future Value (FV)alue-ex11" type="number"><br>
                         </form>
@@ -1093,7 +1093,7 @@
                     <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                     <div class="container">
                         <div class="">
-                            <form action="" class="indent">
+                            <form action="">
                                 <label> </label>
                                 <input id="Present Value (PV)alue-ex12" type="number"><br>
                                 <label> </label>
@@ -1197,7 +1197,7 @@
                     <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                     <div class="container">
                         <div class="">
-                            <form action="" class="indent">
+                            <form action="">
                                 <label> </label>
                                 <input id="Present Value (PV)alue-ex13" type="number"><br>
                             </form>
@@ -1297,7 +1297,7 @@
                     <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
                     <div class="container">
                         <div class="">
-                            <form action="" class="indent">
+                            <form action="">
                                 <label> </label>
                                 <input id="Present Value (PV)alue-ex14" type="number"><br>
                                 <label> </label>
@@ -1401,7 +1401,7 @@
                     <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
                     <div class="container">
                         <div class="">
-                            <form action="" class="indent">
+                            <form action="">
                                 <label> </label>
                                 <input id="Present Value (PV)alue-ex15" type="number"><br>
                             </form>
