--- a/not-on-server/tvm3/lecture3.html
+++ b/not-on-server/tvm3/lecture3.html
@@ -503,7 +503,7 @@
                             <p>Example:</p>
                             <p class="question">If you plan to deposit $100 at the end of each year for 3 years, how much will you have in 3 years?</p>
                             <p>First, determine whether its an ordinary annuity or annuity due and draw the timeline.</p>
-                            <p class="indent">The cash flows in the question constitute an ordinary annuity because the payments arrive "at the end of each year". The timeline looks like this:
+                            <p>The cash flows in the question constitute an ordinary annuity because the payments arrive "at the end of each year". The timeline looks like this:
                                 <div class="bottom-space">
                                     <img src="./images/tvm3_example_1_ordinary_annuity.png" class="img-fluid " alt="">
                                 </div>
@@ -1187,7 +1187,7 @@
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
 
                                         <label>FVA</span> </label>
                                         <input id="fv-ex1" type="number" placeholder="0"><br>
@@ -1284,7 +1284,7 @@
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>FVA</span> </label>
                                         $<input id="fv-ex2" type="number" placeholder="0.00"><br>
                                     </form>
@@ -1376,7 +1376,7 @@
                             <p class="question">If I save $100 per month in an account earning a nominal rate of 8% per year for 20 years, how much should the account be worth?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>FVA</span> </label>
                                         <input id="fv-ex3" type="number" placeholder="0.00"><br>
                                         <label><span class="cf">CF</span> </label>
@@ -1466,7 +1466,7 @@
                             <p class="question">If I save $100 per month in an account earning a nominal rate of 8% per year for 20 years, how much should the account be worth?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>FVA</span> </label>
                                         $<input id="fv-ex4" type="number" placeholder="0.00"><br>
                                     </form>
@@ -1555,7 +1555,7 @@
                             <p class="question">What if I deposited the $1200 a year at the beginning of the year for 20 years earning 8% interest? How much would the account be worth? <span class="note">(Hint: as an ordinary annuity, it was worth $54,914.36).</span></p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>FVA</span> </label>
                                         $<input id="fv-ex5" type="number" placeholder="0.00"><br>
                                     </form>
@@ -1651,7 +1651,7 @@
                             <p class="question">How much more would an account be worth if you paid in $500 per quarter instead of $1000 semi-annually at 6% interest for 10 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>FVA</span> of the weekly option:</label>
                                         $<input id="fv-ex6a" type="number" placeholder="0.00"><br>
 
