--- a/not-on-server/z-extra-files/lecture copy.html
+++ b/not-on-server/z-extra-files/lecture copy.html
@@ -177,11 +177,11 @@
                         <div class="col-sm-12">
                             <div class="content-noBtns">
                                 <p>We could start working with the equation right away, but it is important to understand the relationships between the variables that figure into TVM (Time Value of Money). Let's work through a scenario to establish the relationships underlying TVM:</p>
-                                <p class="indent">You usually collect customer accounts at the end of the month, but one customer requests an extension. If you forego the payment for a while, you should be compensated for the delay.</p>
+                                <p>You usually collect customer accounts at the end of the month, but one customer requests an extension. If you forego the payment for a while, you should be compensated for the delay.</p>
                                 <p>What factors would you consider in determining how much the customer should pay at a later date?</p>
-                                <p class="indent">Most lenders would want to know:</p>
+                                <p>Most lenders would want to know:</p>
                                 <p>
-                                    <ul class="indent">
+                                    <ul>
                                         <li>How much is being borrowed?</li>
                                         <li>How long will it take the customer to repay the loan?</li>
                                         <li>What is the risk that the customer will not be able to pay the account at a later date?</li>
@@ -431,7 +431,7 @@
                         <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, what would you do if asked for the future value after 100 years? You could create a spreadsheet of formulas with 100 interest payment calculations. However, its time consuming and fortunately, unncessary.</p>
                         <p>Instead, we'll derive a general equation that will allow you to solve for Future Value (FV)</span>, Present Value (PV)</span>, Interest rate (i)</span>, or number of years (n)</span>.</p>
                         <p>Let's look back at our previous calculations:</p>
-                        <ol class="indent">
+                        <ol>
                             <li>Figure out the 1st year of interest by finding 10% of $100.
                                 <div class="math">(100</span> * 0.10</span>) = 10</span></div>
                             </li>
@@ -485,7 +485,7 @@
                                 PV</span>
                             </div>
                         </p>
-                        <ol class="indent">
+                        <ol>
                             <li>Start with the parenthesis by multiplying the variables within.
                                 <div class="math">
                                     PV</span>i</span> +
@@ -633,7 +633,7 @@
                         <p class="note indent">Interest should be expressed as a decimal. Leave the unknown variable box empty.</p>
                         <div class="container">
                             <div class="left">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <label>PV</span> </label>
                                     <input id="pvalue" type="number" placeholder="0"><br>
