--- a/tvm4/lecture4.html
+++ b/tvm4/lecture4.html
@@ -1366,7 +1366,7 @@
                         <p class="question">What is the present value of an ordinary annuity that pays $100 semi-annually for 10 years at 4% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <input id="pva-ex1" type="radio" name="option" value="optA">
                                     <label>A) Annuity (PVA)</label><br>
@@ -1463,7 +1463,7 @@
                         <p class="question">What is the Present Value of an ordinary annuity that pays $100 semi-annually for 10 years at 4% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     <input id="pva-ex2" type="number" placeholder="0"><br>
 
@@ -1570,7 +1570,7 @@
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     $<input id="pva-ex3" type="number" placeholder="0.00"><br>
                                 </form>
@@ -1667,7 +1667,7 @@
                         <p class="question">What is the present value of an annuity due that pays $100 semi-annually for 10 years at 4% interest, if you already know that the PVA of an ordinary annuity with the same variables equals $1635.14? Use the general format of the TVM equation.</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label> </label>
                                     <input id="pv-ex4" type="number" placeholder="0.00"><br>
 
@@ -1769,7 +1769,7 @@
                         <p class="question">What is the present value of an annuity due that pays $100 semi-annually for 10 years at 4% interest, if you already know that the PVA of an ordinary annuity with the same variables equals $1635.14? Use the general format of the TVM equation.</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     $<input id="pva-ex5" type="number" placeholder="0.00"><br>
                                 </form>
@@ -1870,7 +1870,7 @@
                         <p class="question">What is the Present Value of an annuity that pays $25 quarterly for 20 years at 8% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <input id="pva-ex6" type="radio" name="option" value="optA">
                                     <label>A) Annuity (PVA)</label><br>
@@ -1966,7 +1966,7 @@
                         <p class="question">What is the Present Value of an annuity due that pays $25 quarterly for 20 years with an 8% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     <input id="pva-ex7" type="number" placeholder="0.00"><br>
 
@@ -2070,7 +2070,7 @@
                         <p class="question">What is the Present Value of an annuity due that pays $25 quarterly for 20 years wtih an 8% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     $<input id="pva-ex8" type="number" placeholder="0.00"><br>
                                 </form>
@@ -2170,7 +2170,7 @@
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <input id="pva-ex9" type="radio" name="option" value="optA">
                                     <label>A) Annuity (PVA)</label><br>
@@ -2265,7 +2265,7 @@
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     <input id="pva-ex10" type="number" placeholder="0.00"><br>
 
@@ -2368,7 +2368,7 @@
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label><span class="cf">CF</span> </label>
                                     $<input id="cf-ex11" type="number" placeholder="0.00"><br>
 
@@ -2470,7 +2470,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
 
                                     <input id="pva-ex12" type="radio" name="option" value="optA">
                                     <label>A) Annuity (PVA)</label><br>
@@ -2566,7 +2566,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     <input id="pva-ex13" type="number" placeholder="0.00"><br>
 
@@ -2678,7 +2678,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     $<input id="pva-ex14" type="number" placeholder="0.00"><br>
 
@@ -2781,7 +2781,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>PVA</span> </label>
                                     <input id="pva-ex15" type="number" placeholder="0.00"><br>
 
@@ -2886,7 +2886,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label> </label>
                                     <input id="pv-ex16" type="number" placeholder="0.00"><br>
 
@@ -2989,7 +2989,7 @@
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
                             <div class="">
-                                <form action="" class="indent">
+                                <form action="">
                                     <label>What would you pay?</span></label>
                                     $<input id="pv-ex17" type="number" placeholder="0.00"><br>
 
