--- a/not-on-server/lecture2 copy.html
+++ b/not-on-server/lecture2 copy.html
@@ -1024,7 +1024,7 @@
                             <p class="question">If I deposit $2,000 in an account that earns a semi-annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
 
                                         <label> </label>
                                         <input id="pvalue-ex2" type="number" placeholder="0"><br>
@@ -1122,7 +1122,7 @@
                             <p class="question">If I deposit $2,000 in an account that earns a semi-annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label> </label>
                                         <input id="fvalue-ex3" type="number" placeholder="0"><br>
                                     </form>
@@ -1213,7 +1213,7 @@
                             <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label> </label>
                                         <input id="pvalue-ex4" type="number"><br>
                                         <label> </label>
@@ -1301,7 +1301,7 @@
                             <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label> </label>
                                         <input id="fvalue-ex5" type="number" placeholder="0.00"><br>
                                     </form>
@@ -1389,7 +1389,7 @@
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                         <input id="int-ex6" type="number" placeholder="00"><br>
                                         <label>m</span> </label>
@@ -1471,7 +1471,7 @@
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly? <span class="note">(Enter two digits to the right of the decimal)</span></p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label><b>EAR</b></label>
                                         <input id="ear-ex7" type="number" placeholder="0.00">%<br>
                                     </form>
@@ -1554,7 +1554,7 @@
                             <div class="container">
                                 <div class="">
                                     <p>Option A</p>
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                         <input id="int-ex8a" type="number" placeholder="00"><br>
                                         <label>m</span> </label>
@@ -1562,7 +1562,7 @@
                                     </form>
                                     <br><br>
                                     <p>Option B</p>
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>i</span>&nbsp;&nbsp;&nbsp; </label>
                                         <input id="int-ex8b" type="number" placeholder=".0000"><br>
                                         <label>m</span> </label>
@@ -1651,7 +1651,7 @@
                             <p class="note">Note: Please round to 2 places after the decimal point.</span></p>
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
                                         <label>EAR of Option A:</label>
                                         <input id="ear-ex9a" type="number" placeholder="00.00">%<br>
                                         <label>EAR of Option B:</label>
