--- a/not-on-server/originals/lecture1 copy 6.html
+++ b/not-on-server/originals/lecture1 copy 6.html
@@ -120,7 +120,7 @@
 
                             <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
                             <p>For example:</p>
-                            <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
+                            <p>A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
                             <p>Most lenders would want to know:
                                 <ul>
                                     <li>How much is being borrowed?</li>
@@ -383,7 +383,7 @@
 
                             <div class="container">
                                 <div class="">
-                                    <form action="" class="indent">
+                                    <form action="">
 
                                         <label>PV </label>
                                         <input id="PV" type="number" placeholder="0"><br>
